--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "start": "npm run build  && node  dist/server.js",
-    "dev": "nodemon --watch backend --exec babel-node backend/server.js",
-    "build": "rm -rf dist && babel backend -d dist  && cd frontend && npm install &&  npm run build",
+    "start": "nodemon --watch backend --exec babel-node backend/server.js",
+    "build": "rm -rf dist && babel backend -d dist  && cd frontend && npm install && npm run build",
     "heroku-postbuild-x": "npm run build && cd frontend && npm install && npm run build"
   },
   "repository": {
