--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "aws-sdk": "^2.702.0",
     "body-parser": "^1.19.0",
+    "docker-compose": "^0.23.6",
     "dotenv": "^8.2.0",
     "eslint-plugin-react": "^7.19.0",
     "express": "^4.17.1",
@@ -27,8 +28,9 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "start": "nodemon --watch backend --exec babel-node backend/server.js",
-    "build": "rm -rf dist && babel backend -d dist  && cd frontend && npm install && npm run build",
+    "start": "npm run build  && node  dist/server.js",
+    "dev": "nodemon --watch backend --exec babel-node backend/server.js",
+    "build": "rm -rf dist && babel backend -d dist  && cd frontend && npm install &&  npm run build",
     "heroku-postbuild-x": "npm run build && cd frontend && npm install && npm run build"
   },
   "repository": {
