--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
